--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ html {
   a {
     font-weight: normal;
     text-decoration: none; 
-    color:#EF6D3D;
+    color:#46a556;
   }
   a:focus {
     outline: thin dotted;
