--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ html {
   }
   ul.main-menu li a.active {
     color:#FFFFFF;
-    border-bottom-color:#EF6D3D;
+    border-bottom-color:#46a556;
   }
   
   /* Utility classes */
